# ENVILoader

./: .gitmodules  CMakeLists.txt  LICENSE  Readme.md  conanfile.py
.github/workflows/: build.yml
src/: ENVILoader.cpp  ENVILoader.h  ENVILoaderModel.cpp  ENVILoaderModel.h  ENVILoaderPlugin.cpp  ENVILoaderPlugin.h  ENVILoaderPlugin.json  SubsampleSettingsWidget.cpp  SubsampleSettingsWidget.h  SubsampleSettingsWidget.ui  SubsamplingRatioAction.cpp  SubsamplingRatioAction.h
